2002-08-09  Jody Goldberg <jody@gnome.org>

	* configure.in (int) : enable plan perfect.

2002-08-09  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-component.c
	(workbook_control_component_ctor_class) : set_sensitive is now in
	command context.

2002-08-09  Jody Goldberg <jody@gnome.org>

	* src/dependent.c (sheet_deps_destroy) : clean names before deps
	  so that we don't end up with stale deps in a name dep list.
	(workbook_deps_destroy) : clear sheet names too.

	* src/expr-name.c (expr_name_shutdown) : deactivate the builtins
	  before freeing them.

2002-06-28  J.H.M. Dassen (Ray) <jdassen@debian.org>

	MIME consistency improvements
	* icons/gnome-application-vnd.lotus-1-2-3.png,
	  icons/gnome-application-x-applix-spreadsheet.png,
	  icons/gnome-application-x-generic-spreadsheet.png,
	  icons/gnome-application-x-generic-spreadsheet.png: New (from mc and
	  gnome-mime-data).
	* icons/Makefile.am: Updated for new icons.
	* gnumeric.keys.in: Added application/vnd.lotus-1-2-3,
	  application/x-applix-spreadsheet, application/x-oleo,
	  application/x-xbase
	* gnumeric.mime: Changed application/x-applix to
	  application/x-applix-spreadsheet to be consistent with the type
	  elsewhere; added application/vnd.lotus-1-2-3 with extensions as per
	  http://www.iana.org/assignments/media-types/application/vnd.lotus-1-2-3

2002-06-02  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* debian/*: updated.
	* src/cell.h: made declaration of cell_new a prototype.
	* src/plugin.h: declare printf format attribute for plugin_message.
	* src/print.c: removed duplicate declaration of print_debugging (which
	  is already declared via libgnumeric.h .

2002-08-08  Jody Goldberg <jody@gnome.org>

	* src/expr-name.c (expr_name_shutdown) : fix

2002-08-08  Jody Goldberg <jody@gnome.org>

	* src/workbook-view.c (wb_view_new_from_input) : its ok to have 0 sheets,
	  this is not the place to display the error messages.
