@@ -1,3 +1,10 @@
+2002-08-07  Zbigniew Chyla  <cyba@gnome.pl>
+
+	* src/module-plugin-defs.h
+	(PLUGIN): New convenience macro for accessing the plugin object.
+	Define only if PLUGIN_ID is defined.
+	(GNUMERIC_MODULE_PLUGIN_GET_INFO): Removed
+
 2002-08-09  Jody Goldberg <jody@gnome.org>
 
 	* configure.in (int) : enable plan perfect.
